--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.29.0",
     "generate-react-cli": "^8.0.1",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.0",
