--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
+  "useTabs": false,
   "tabWidth": 2,
+  "printWidth": 100,
   "singleQuote": true,
   "trailingComma": "all",
   "semi": true,
   "bracketSameLine": true,
-  "printWidth": 100
+  "quoteProps": "consistent",
+  "arrowParens": "always"
 }
