--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react-swc": "^3.0.1",
     "eslint": "^8.30.0",
     "generate-react-cli": "^8.1.2",
     "node-sass": "^8.0.0",
