--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,12 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "trailingComma": "all",
   "semi": true,
   "bracketSameLine": true,
   "quoteProps": "consistent",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "bracketSpacing": true
 }
