--- a/.eslintrc
+++ b/.eslintrc
@@ -1,55 +1,72 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
+  "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
     "airbnb",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:jsx-a11y/recommended",
+    "plugin:prettier/recommended",
+    "plugin:promise/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:react/recommended",
+    "plugin:sonarjs/recommended",
     "prettier"
   ],
-  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint",
+    "jsx-a11y",
+    "no-use-extend-native",
+    "optimize-regex",
+    "prettier",
+    "promise",
+    "react-hooks",
+    "react",
+    "react",
+    "sonarjs"
+  ],
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
+    "ecmaFeatures": { "jsx": true },
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
-  "ignorePatterns": ["config-overrides.js", "node_modules", "build", "*.d.ts"],
+  "ignorePatterns": ["node_modules", "dist", "*.d.ts", "tsconfig.node.json"],
   "rules": {
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "consistent-return": "off",
-    "function-paren-newline": "off",
-    "implicit-arrow-linebreak": "off",
-    "import/extensions": "off",
-    "import/no-unresolved": "off",
-    "import/order": "off",
+    "arrow-body-style": "off",
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          ["builtin", "external"],
+          ["internal", "parent", "index"],
+          "sibling",
+          "type",
+          "object"
+        ],
+        "pathGroups": [{ "pattern": ".*/*.module.scss", "group": "object" }],
+        "newlines-between": "always"
+      }
+    ],
+    "import/extensions": ["warn", "never"],
+    "import/no-extraneous-dependencies": ["error", { "packageDir": "./" }],
     "import/prefer-default-export": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
     "linebreak-style": "off",
+    "no-console": ["error", { "allow": ["warn", "error"] }],
     "no-param-reassign": "off",
-    "no-shadow": "off",
-    "object-curly-newline": "off",
-    "prefer-promise-reject-errors": "off",
-    "react/function-component-definition": [
-      "error",
-      {
-        "namedComponents": "arrow-function"
-      }
-    ],
-    "react/jsx-filename-extension": [
-      "error",
-      {
-        "extensions": [".ts", ".tsx"]
-      }
-    ],
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "no-use-extend-native/no-use-extend-native": "error",
+    "optimize-regex/optimize-regex": "warn",
+    "prettier/prettier": ["warn", { "endOfLine": "auto" }],
+    "react/function-component-definition": ["warn", { "namedComponents": "arrow-function" }],
+    "react/jsx-filename-extension": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/jsx-wrap-multilines": "off",
-    "react/require-default-props": "off"
+    "react/jsx-wrap-multilines": ["warn", { "prop": "ignore" }],
+    "react/no-unstable-nested-components": ["error", { "allowAsProps": true }],
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "sonarjs/cognitive-complexity": ["error", 30]
   },
   "settings": {
     "import/resolver": {
