--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "project-template",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "component": "generate-react component",
     "build": "tsc && vite build",
+    "component": "generate-react component",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "engines": {
@@ -18,23 +19,35 @@
     "antd": "^5.1.0",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "@vitejs/plugin-react-swc": "^3.0.1",
-    "eslint": "^8.30.0",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-no-use-extend-native": "^0.5.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "generate-react-cli": "^8.1.2",
-    "node-sass": "^8.0.0",
     "prettier": "^2.8.1",
     "sass": "^1.57.1",
-    "typescript": "^4.9.4",
-    "typescript-plugin-css-modules": "^4.1.1",
-    "vite": "^4.0.3"
+    "typescript": "^5.0.2",
+    "typescript-plugin-css-modules": "^5.0.1",
+    "vite": "^4.3.9",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
