--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.1.0",
     "axios": "^1.2.1",
